# quantum-noise-learning-lab

./: .gitignore  LICENSE  PLAN.md  PLAN_V2.md  README.md  launch.bat  launch.ps1  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: main.py
app/components/: bloch.py  explain.py  plots.py  theme.py  validation.py
app/pages/: 1_Foundations_Lab.py  2_Noise_Lab.py  3_Metrics_Lab.py  4_Validation_Lab.py  5_Protection_Lab.py
docs/: 01_foundations.md  02_density_matrices.md  03_noise_channels.md  04_metrics.md  05_analytical_validation.md  06_qec_intuition.md  limitations.md
examples/: generate_all_figures.py  run_single_qubit_sweep.py
results/data/: single_qubit_sweep.csv
src/quantum_noise_lab/: __init__.py  analytical.py  metrics.py  noise.py  qec.py  states.py  sweeps.py
tests/: generate_parity_fixtures.py  test_analytical.py  test_architecture.py  test_metrics.py  test_noise.py  test_qec.py  test_smoke.py  test_states.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/__tests__/: parity.test.ts  parity_fixtures.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/foundations/: page.tsx
web/app/metrics/: page.tsx
web/app/noise/: page.tsx
web/app/protection/: page.tsx
web/app/validation/: page.tsx
web/components/: AnimatedBackground.tsx  AnimatedCursor.tsx  BlochSphere.tsx  Callouts.tsx  Charts.tsx  DensityMatrixHeatmap.tsx  Equation.tsx  GlassPanel.tsx  LiquidBackground.tsx  Logo.tsx  Navigation.tsx  OpeningAnimation.tsx  PageTransition.tsx  PlotlyCore.tsx  PlotlyCurve.tsx  ThemeProvider.tsx  ThemeToggle.tsx
web/lib/: analytical.ts  complex.ts  matrix.ts  metrics.ts  modules.ts  noise.ts  qec.ts  states.ts  sweeps.ts  theme.ts
web/types/: react-plotly.d.ts
